apps/issuer-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuer-service
  namespace: issuer-service-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer-service
  template:
    metadata:
      labels:
        app: issuer-service
    spec:
      containers:
        - name: issuer-service
          image: linuxserver/openssh-server
          ports:
            - containerPort: 2222
