apps/issuer-service/base/network-default-allow-wallet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-wallet-to-issuer
  namespace: issuer-service-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: wallet-services-ns
